--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="photos">PHOTOS</string>
     <string name="known_for">KNOWN FOR</string>
     <string name="highlighted_movie_image">highlighted movie image</string>
+    <string name="text_hint_search_feature">Search</string>
 </resources>
