--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="text_hint_search_feature">Search</string>
     <string name="space_iklan">Space Iklan</string>
     <string name="menu">Menu</string>
+    <string name="text_feature_not_found">Search not found</string>
 </resources>
